add birth_date filter and start_date filter
