# docs/swagger.json
@@ -30,6 +30,74 @@
                     "accidents"
                 ],
                 "summary": "Get all accidents",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Start date",
+                        "name": "start_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "End date",
+                        "name": "end_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Employee start date",
+                        "name": "employee_start_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Employee end date",
+                        "name": "employee_end_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Employee birth date start",
+                        "name": "employee_birth_date_start",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Employee birth date end",
+                        "name": "employee_birth_date_end",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Project ID",
+                        "name": "project_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Gravity ID",
+                        "name": "gravity_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Classification ID",
+                        "name": "classification_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Injured Part ID",
+                        "name": "injured_part_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Employee ID",
+                        "name": "employee_id",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Accidentes obtenidos correctamente",
@@ -3192,6 +3260,9 @@
         "employees.CreateEmployeeRequest": {
             "type": "object",
             "properties": {
+                "birth_date": {
+                    "type": "string"
+                },
                 "contract_type": {
                     "type": "string"
                 },
@@ -3230,6 +3301,9 @@
         "employees.CreateEmployeeResponse": {
             "type": "object",
             "properties": {
+                "birth_date": {
+                    "type": "string"
+                },
                 "contract_type": {
                     "type": "string"
                 },
@@ -3364,6 +3438,9 @@
         "employees.Employee": {
             "type": "object",
             "properties": {
+                "birth_date": {
+                    "type": "string"
+                },
                 "contract_type": {
                     "type": "string"
                 },
@@ -3422,6 +3499,9 @@
         "employees.GetEmployeeResponse": {
             "type": "object",
             "properties": {
+                "birth_date": {
+                    "type": "string"
+                },
                 "contract_type": {
                     "type": "string"
                 },
@@ -3640,6 +3720,9 @@
         "employees.UpdateEmployeeRequest": {
             "type": "object",
             "properties": {
+                "birth_date": {
+                    "type": "string"
+                },
                 "contract_type": {
                     "type": "string"
                 },
