# employees/models.go
@@ -14,6 +14,7 @@ type Employee struct {
 	Email                string             `bson:"email,omitempty" json:"email"`
 	InLaw                bool               `bson:"in_law,omitempty" json:"in_law"`
 	ContractType         string             `bson:"contract_type,omitempty" json:"contract_type"`
+	BirthDate            time.Time          `bson:"birth_date,omitempty" json:"birth_date"`
 	StartDate            time.Time          `bson:"start_date,omitempty" json:"start_date"`
 	EndDate              time.Time          `bson:"end_date,omitempty" json:"end_date"`
 	Supervisor           Supervisor         `bson:"supervisor,omitempty" json:"supervisor"`
